ver1.1.6 redis
